src/app/pages/add-task/add-task.scss
@use '../../../styles/abstracts' as *;

.add-task {
  @include flex(column);
  gap: clamp(40px, 3.5vw, 50px);
  width: 100%;
  max-width: 1208px;
  padding: 110px 135px 80px 100px;
  background: $color-bg-content;
  box-sizing: border-box;
  @include fluid-text(16, 20);

  &__form {
    @include flex(column, nowrap, flex-start, flex-start);
    gap: 130px;
    width: 100%;
  }

  &__columns {
    @include flex;
    gap: 48px;
    width: 100%;
  }

  &__column {
    flex: 1;
    @include flex(column);
    gap: 35px;
  }

  &__divider {
    width: 1px;
    background: $color-gray-form;
  }

  &__field {
    @include flex(column);
    gap: 8px;
    width: 100%;
  }

  &__label {
    @include flex(row, wrap, flex-start, center);
    color: $color-primary;
  }

  &__required {
    color: $color-error;
  }

  &__required-info {
    @include flex(row, wrap, flex-start, self-end);
    gap: 4px;
    color: $color-primary;
    flex: 1 1 auto;
    min-width: 0;
  }

  &__required-info--mobile {
    display: none;
  }

  &__error {
    font-size: 16px;
    color: $color-error;
  }

  &__input--error {
    border: 1px solid $color-error;
  }

  &__input,
  &__select {
    width: 100%;
    height: 48px;
    padding: 0 16px;
    border: 1px solid $color-gray-form;
    border-radius: 10px;
    background: $color-white;
    outline: none;
    box-sizing: border-box;
    transition: border 0.2s ease;
    cursor: pointer;

    &:focus {
      border: 1px solid $color-highlight;
    }

    &.add-task__input--subtask {
      padding-right: 80px;
    }

    &[type='date']::-webkit-calendar-picker-indicator {
      cursor: pointer;
    }
  }

  &__textarea {
    width: 100%;
    min-height: 120px;
    padding: clamp(10px, calc(0.68vw + 7.82px), 16px);
    border: 1px solid $color-gray-form;
    border-radius: 10px;
    background: $color-white;
    outline: none;
    box-sizing: border-box;
    transition: border 0.2s ease;
    cursor: pointer;
    resize: vertical;

    &:focus {
      border: 1px solid $color-highlight;
    }
  }

  &__priority-buttons {
    @include flex;
    gap: 16px;
  }

  &__priority-button {
    flex: 1;
    height: 48px;
    border: 1px solid $color-gray-form;
    border-radius: 10px;
    background: $color-white;
    cursor: pointer;
    @include flex(row, nowrap, center, center);
    white-space: nowrap;
    padding: 0 10px;
    transition: all 0.2s ease;

    &:hover:not(&--active) {
      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
    }

    &:active {
      box-shadow: none;
    }

    &--active {
      border: none;
      color: $color-white;
      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
    }

    &--urgent {
      background: $color-priority-urgent;
    }

    &--medium {
      background: $color-priority-medium;
    }

    &--low {
      background: $color-priority-low;
    }
  }

  &__priority-icon {
    width: 32px;
    height: 32px;
    transition: filter 0.2s ease;
  }

  &__priority-button--active &__priority-icon {
    filter: brightness(0) invert(1);
  }

  &__assigned {
    position: relative;
    @include flex(column);
    width: 100%;

    &--open {
      z-index: $z-index-dropdown + 2;
    }
  }

  &__category {
    position: relative;
    @include flex(column);
    gap: 16px;
    width: 100%;
  }

  &__assigned-input,
  &__category-input {
    width: 100%;
    height: 48px;
    padding: 0 16px;
    border: 1px solid $color-gray-form;
    border-radius: 10px;
    background: $color-white;
    @include flex(row, wrap, space-between, center);
    box-sizing: border-box;
    cursor: pointer;
    transition: border 0.2s ease;
    z-index: $z-index-dropdown-top;

    &:hover {
      border-color: $color-highlight;
    }
  }

  &__assigned-search {
    flex: 1;
    min-width: 0;
    border: none;
    outline: none;
    background: transparent;
    cursor: pointer;

    &::placeholder {
      color: $color-text;
    }
  }

  &__assigned-arrow {
    width: 32px;
    height: 32px;
    padding: 4px;
    border-radius: 50%;
    @include flex(row, wrap, center, center);
    transition:
      transform 0.2s ease,
      background-color 0.2s ease;
    cursor: pointer;
    box-sizing: border-box;

    &:hover {
      background-color: $color-gray-light;
    }

    &--open {
      transform: rotate(180deg);
    }
  }

  &__dropdown {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    background: $color-white;
    border-radius: 12px;
    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15);
    padding-top: 48px;
    z-index: $z-index-dropdown;
  }

  &__dropdown-list {
    @include flex(column, nowrap);
    gap: 4px;
    max-height: 200px;
    overflow-y: auto;

    &::-webkit-scrollbar {
      width: 6px;
    }

    &::-webkit-scrollbar-track {
      background: transparent;
      border-radius: 10px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: $color-gray-form;
      border-radius: 10px;
    }
  }

  &__dropdown-option {
    height: 50px;
    padding: 7px 16px;
    @include flex(row, nowrap, space-between, center);
    cursor: pointer;
    transition: 0.2s ease;
    border-radius: 10px;

    &:hover {
      background: $color-gray-light;
    }

    &:active {
      background: $color-primary;
      color: $color-white;
    }

    &--selected {
      background: $color-secondary-hover;
      color: $color-white;

      &:hover,
      &:active {
        background: $color-primary-hover;
      }
    }
  }

  &__dropdown-contact {
    @include flex(row, nowrap, flex-start, center);
    gap: 12px;
    min-width: 0;

    span {
      flex: 1;
      min-width: 0;

      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  &__checkbox {
    width: 32px;
    height: 32px;
    padding: 4px;
    border-radius: 50%;
    transition:
      background-color 0.2s ease,
      filter 0.2s ease;
    flex-shrink: 0;
  }

  &__dropdown-option:active &__checkbox,
  &__dropdown-option--selected &__checkbox {
    filter: brightness(0) invert(1);
  }

  &__dropdown-option:active &__checkbox {
    background-color: rgba(255, 255, 255, 0.1);
  }

  &__selected-contacts {
    @include flex(row, wrap, flex-start, center);
    margin-top: 16px;

    &:empty {
      margin-top: 0;
    }

    app-avatar {
      margin-right: -8px;
    }
  }

  &__more-wrapper {
    position: relative;
  }

  &__more-count {
    width: 36px;
    height: 36px;
    border-radius: 50%;
    background: $color-primary;
    color: $color-white;
    border: 2px solid $color-white;
    font: inherit;
    @include flex(row, wrap, center, center);
    cursor: pointer;
  }

  &__more-dropdown {
    position: absolute;
    top: 40px;
    width: max-content;
    min-width: 282px;
    max-width: min(280px, 90vw);
    max-height: 250px;
    overflow-y: auto;
    background: $color-white;
    border-radius: 12px;
    padding: 8px 0;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
    z-index: $z-index-dropdown;

    &::-webkit-scrollbar {
      width: 6px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: $color-gray-form;
      border-radius: 10px;
    }

    &::-webkit-scrollbar-track {
      background: transparent;
    }
  }

  &__more-contact {
    @include flex(row, nowrap, flex-start, center);
    gap: 20px;
    padding: 8px 12px;
    transition: background 0.2s ease;

    &:hover {
      background: $color-gray-light;
    }

    span {
      flex: 1;
      min-width: 0;
      overflow-wrap: break-word;
      word-break: break-word;
      white-space: normal;
      line-height: 1.3;
    }
  }

  &__subtask-item-buttons {
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.2s ease;
  }

  &__subtask-item:hover &__subtask-item-buttons {
    opacity: 1;
    pointer-events: all;
  }

  &__actions {
    @include flex(row, wrap, space-between);
    gap: 16px;
    width: 100%;
  }

  &__action-buttons,
  &__buttons {
    @include flex(row, wrap, flex-end, center);
    gap: 10px;
    z-index: $z-index-dropdown + 3;
  }
}

@media (max-width: 1350px) {
  .add-task {
    padding: 80px 40px;
  }
}

@include tablet-xl {
  .add-task {
    padding: 48px 14px 100px 14px;
    height: auto;
    min-height: calc(100vh - 80px);

    &__subtask-item-buttons {
      opacity: 1;
      pointer-events: all;
    }


    &__columns {
      flex-direction: column;
      gap: 35px;
    }

    &__divider {
      display: none;
    }

    &__actions {
      position: sticky;
      bottom: 80px;
      justify-content: flex-end;
      background: $color-bg-content;
      z-index: $z-index-dropdown + 3;
      padding-block: 6px;
    }

    &__required-info--desktop {
      display: none;
    }

    &__required-info--mobile {
      display: flex;
    }

    &__textarea {
      resize: none;
    }

    &__form {
      gap: 20px;
    }
  }
}

@include mobile-md {
  .add-task {
    &__priority-buttons {
      flex-direction: column;

      .add-task__priority-button {
        flex: none;
      }
    }
    &__more-dropdown {
      left: -84px;
    }

    &__input,
    &__assigned-input,
    &__category-input {
      padding: 0 6px;
    }
  }
}

@include mobile-sm {
  .add-task {
    &__actions {
      .btn {
        padding: 12px;
      }
    }

    &__more-dropdown {
      left: -84px;
    }

    &__input,
    &__assigned-input,
    &__category-input {
      padding: 0 6px;
    }
  }
}

